# networking-recipe

./: .gitignore  .gitmodules  .markdownlint.json  CMakeLists.txt  CMakePresets.json  README.build.md  README.md  config-cross-recipe.sh  make-all.sh  make-cross-ovs.sh  requirements.txt  version.json
clients/: CMakeLists.txt  client_cert_options.cc  client_cert_options.h
clients/gnmi-ctl/: CMakeLists.txt  gnmi_ctl.cc  gnmi_ctl_utils.c  gnmi_ctl_utils.h
clients/p4rt-ctl/: CMakeLists.txt  p4rt-ctl.in
clients/p4rt-ctl-cpp/: CMakeLists.txt  p4rt_perf.cc  p4rt_perf.h  p4rt_perf_session.cc  p4rt_perf_session.h  p4rt_perf_simple_l2_demo.cc  p4rt_perf_simple_l2_demo.h  p4rt_perf_tls_credentials.cc  p4rt_perf_tls_credentials.h  p4rt_perf_util.cc  p4rt_perf_util.h
clients/p4rt_perf_test/: CMakeLists.txt  p4rt_perf_main.cc  p4rt_perf_session.cc  p4rt_perf_session.h  p4rt_perf_simple_l2_demo.cc  p4rt_perf_simple_l2_demo.h  p4rt_perf_test.h  p4rt_perf_tls_credentials.cc  p4rt_perf_tls_credentials.h  p4rt_perf_util.cc  p4rt_perf_util.h
clients/sgnmi_cli/: CMakeLists.txt  README.md  sgnmi_cli.cc
clients/tools/: CMakeLists.txt
config/: CMakeLists.txt
infrap4d/: CMakeLists.txt  infrap4d_lite.cc  infrap4d_main.cc
infrap4d/daemon/: CMakeLists.txt  daemon-unix.c  daemon.c  daemon.h  fatal-signal.c  fatal-signal.h
krnlmon/: CMakeLists.txt
krnlmon/krnlmon/: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  README.md  SECURITY.md  WORKSPACE.bazel  dpdk.cmake  dummy_main.cc  es2k.cmake  krnlmon_main.cc  krnlmon_main.h  krnlmon_options.h  libkrnlmon.pc.in
krnlmon/krnlmon/.github/: CODEOWNERS
krnlmon/krnlmon/bazel/: BUILD.bazel  defs.bzl  dpdk.bzl  es2k.bzl  rules.bzl  sde.bzl
krnlmon/krnlmon/cmake/: iwyu.cmake  standalone.cmake  testing.cmake
krnlmon/krnlmon/flags/: BUILD.bazel
krnlmon/krnlmon/scripts/: bazel-check-dpdk.sh  bazel-check-es2k.sh  cmake-check-dpdk.sh  cmake-check-es2k.sh
krnlmon/krnlmon/switchapi/: BUILD.bazel  CMakeLists.txt  README.md  switch_base_types.h  switch_config.h  switch_config_int.h  switch_device.h  switch_device_int.h  switch_fdb.h  switch_handle.h  switch_handle_int.h  switch_id.h  switch_interface.h  switch_internal.h  switch_l3.h  switch_l3_int.h  switch_lag.h  switch_neighbor.h  switch_neighbor_int.h  switch_nhop.h  switch_nhop_int.h  switch_pd_routing.h  switch_port_int.h  switch_rif.h  switch_rif_int.h  switch_rmac.h  switch_rmac_int.h  switch_status.h  switch_table.h  switch_tdi.h  switch_tunnel.h  switch_types_int.h  switch_vrf.h
krnlmon/krnlmon/switchlink/: BUILD.bazel  CMakeLists.txt  README.md  switchlink.h  switchlink_address.c  (+20 more)
modules/: CMakeLists.txt  config.h.in
modules/clients/: CMakeLists.txt  client_parse_key_value.c  client_parse_key_value.h  client_strzcpy.c  client_strzcpy.h  gnmi_cli.cc  gnmi_cli_utils.c  gnmi_cli_utils.h
modules/ovs-addons/: .gitignore  CMakeLists.txt
ovs/: CMakeLists.txt  CMakePresets.json  make-ovs.sh
ovs-p4rt/: CMakeLists.txt  ovs_p4rt.cc  ovs_p4rt_session.cc  ovs_p4rt_session.h  ovs_p4rt_tls_credentials.cc  ovs_p4rt_tls_credentials.h  ovsp4rt_credentials.cc  ovsp4rt_session.cc  p4_name_mapping.h
ovs-p4rt/cmake/: CheckBinutilsAVX512.cmake
ovs-p4rt/doc/: FunctionsWithTests.xlsx  PrepareFunctions.txt
ovs-p4rt/docs/: ovsp4rt-encoding-anomalies.md
ovs-p4rt/dpdk/: CMakeLists.txt  p4_name_mapping.h
ovs-p4rt/es2k/: CMakeLists.txt  p4_name_mapping.h
ovs-p4rt/ovs/: CMakeLists.txt  dummy.cc  testcontroller.cmake  vswitchd.cmake
ovs-p4rt/sidecar/: CMakeLists.txt  libovsp4rt.pc.in  newovsp4rt.cc  ovsp4rt.cc  ovsp4rt_c_api.cc  ovsp4rt_cc_api.h  ovsp4rt_client.cc  ovsp4rt_client.h  ovsp4rt_context.cc  ovsp4rt_context.h  ovsp4rt_credentials.cc  ovsp4rt_credentials.h  ovsp4rt_envoy.cc  ovsp4rt_envoy.h  ovsp4rt_internal_api.h  ovsp4rt_journal_api.cc  ovsp4rt_logging.h  ovsp4rt_private.h  ovsp4rt_public.cc  ovsp4rt_session.cc  ovsp4rt_session.h  ovsp4rt_simple_api.cc  ovsp4rt_standard_api.cc  ovsp4rt_stubs.cc  ovsp4rt_tracker.h  ovsp4rt_utils.cc  scenarios.md
ovs/ovs/: .gitignore  Makefile.am  configure.ac
proto/: CMakeLists.txt  compile_protos.sh  cpp.cmake  go.cmake  google.cmake  p4runtime.cmake  python.cmake
proto/cmake/: cpp.cmake  go.cmake  python.cmake
protobufs/: CMakeLists.txt  README.md  google.cmake  p4runtime.cmake  tarballs.cmake  wheel.cmake
protobufs/content/: setup.cfg.in
protobufs/p4runtimeWheel/: p4runtime-2023.11.0-py3-none-any.whl
protobufs/py/: README.md  setup.cfg
scripts/: CMakeLists.txt  p4cpconfig.py  setup_env.sh
scripts/cmake/: CMakeLists.txt  CMakeUserPresets.json  README.md  dpdk.cmake  es2k.cmake
scripts/common/: CMakeLists.txt  copy_config_files.sh.in  extract_table_ids_from_p4info.py  os_ver_details.sh  set_hugepages.sh  setup_env.sh
scripts/dpdk/: CMakeLists.txt  copy_config_files.sh  os_ver_details.sh  patch-dpdk-sde-rpaths.sh  report-krnlmon-coverage.sh  report-ovsp4rt-coverage.sh  set-dpdk-sde-target.sh  setup_env.sh
scripts/es2k/: CMakeLists.txt  config-cross-recipe.sh  copy_config_files.sh  make-cross-ovs.sh  os_ver_details.sh  patch-es2k-sde-rpaths.sh  report-krnlmon-coverage.sh  report-ovsp4rt-coverage.sh  set-es2k-sde-target.sh  setup_env.sh
scripts/security/: setup_certs_tls_mode.sh
setup/: .gitignore  CMakeLists.txt  README.md  building-es2k-stratum-deps.md  building-stratum-dependencies.md  building-stratum-deps.md  cleanup.sh  deps.cmake  grpc.patch  grpc.patch.in  make-cross-deps.sh  make-host-deps.sh  p4runtime-1.3.0-py3-none-any.whl  prune.sh
setup/cmake/: cxx_standard.cmake  deps.cmake  grpc.patch.in
setup/docs/: building-acc-stratum-deps.md  building-stratum-deps.md  defining-acc-environment.md  installing-acc-sdk.md
stratum/: .gitignore  CMakeLists.txt  dpdk-driver.cmake  es2k-driver.cmake  libstratum.pc.in  tofino-driver.cmake
stratum/config/: CMakeLists.txt
stratum/proto/: CMakeLists.txt  SaveCMakeLists.txt  gnmi_proto.sym.in  p4v1_proto.sym.in  rpc_proto.sym.in  stratum_proto.sym.in
stratum/security/: README.md  credentials_manager.cc  credentials_manager.h
stratum/stratum/: CMakeLists.txt  WORKSPACE
(+1159 files in other folders)
